--- a/python/templates/home.html
+++ b/python/templates/home.html
@@ -2,13 +2,13 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Flask Tutorial</title>
+    <title>Bias Catcher</title>
   </head>
   <body>
     {% extends "template.html" %}
     {% block content %}
 
-    <h1> My First Try Using Flask </h1>
+    <h1> Enter some text to detect common biases </h1>
     <p> Flask is Fun </p>
 	<form method="POST">
     <input name="text">
