--- a/python/templates/home.html
+++ b/python/templates/home.html
@@ -9,7 +9,7 @@
     {% block content %}
 
     <h1> Enter some text to detect common biases </h1>
-    <p> So much of what we write contains unconscious gender and other biases. This tool will help you to detect them. </p>
+    <p> So much of what we write contains unconscious gender and other biases. This tool will help you to detect them. Please enter some text below to see an assessment. </p>
 	<form method="POST">
     <input name="text">
     <input type="submit">
