--- a/python/static/css/template.css
+++ b/python/static/css/template.css
@@ -10,19 +10,27 @@ body {
 
 .tooltip-wrap {
   position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
 }
 .tooltip-wrap .tooltip-content {
-  display: none;
+    visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  padding: 5px 0;
+  border-radius: 6px;
+ 
+  /* Position the tooltip text - see examples below! */
   position: absolute;
-  bottom: 25%;
-  left: 5%;
-  right: 75%;
-  background-color: #d55;
-  padding: .5em;
+  z-index: 1;
 }
 .tooltip-wrap:hover .tooltip-content {
-  display: block;
+  visibility: visible;
 }
+
+
 
 .tooltipSUGG-wrap {
   position: relative;
